WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268936
Log MarketplaceKit errors to JavaScript console
https://bugs.webkit.org/show_bug.cgi?id=268936
Summary
Log MarketplaceKit errors to JavaScript console
Ben Nham
Reported
2024-02-07 11:59:57 PST
Currently if a user taps on a MarketplaceKit link and the installation fails, we log the error to the device console. We should also log the error to the JS console as well to make errors easier to debug for developers.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-07 12:00:21 PST
<
rdar://problem/122488574
>
Ben Nham
Comment 2
2024-02-07 12:02:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24021
EWS
Comment 3
2024-02-07 15:03:20 PST
Committed
274247@main
(bbdeb4c175f1): <
https://commits.webkit.org/274247@main
> Reviewed commits have been landed. Closing PR #24021 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug