Log MarketplaceKit errors to JavaScript console https://bugs.webkit.org/show_bug.cgi?id=268936 rdar://122488574

Reviewed by Brent Fulgham.

Currently if a user taps on a MarketplaceKit link and the installation fails, we log the error to
the device console. We should also log the error to the JS console as well to make errors easier to
debug for developers.

* Source/WebKit/UIProcess/Cocoa/NavigationState.mm:
(WebKit::interceptMarketplaceKitNavigation):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::addConsoleMessage):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/WebKitSwift/MarketplaceKit/MarketplaceKitWrapper.swift:
(MarketplaceKitWrapper.requestAppInstallation(_:url:completionHandler:)):
(MarketplaceKitWrapper.requestAppInstallation(_:url:)): Deleted.

Canonical link: https://commits.webkit.org/274247@main